[package]
authors = ["TJ Melanson <t.melanson17@gmail.com>"]
name = "beat_finder"
version = "0.0.0"
readme = "README.md"
description = "Finds beats on a song"
edition = "2018"

[dependencies]
rspotify = { version = "0.10.0", path="/Users/tjmelanson/Documents/Personal/leds/rspotify", default-features = true, features = ["env-file", "cli", "client-reqwest"] }
dotenv = { version = "0.15.0", optional = true }
env_logger = "0.8.1"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
futures-util = "0.3.8"
robust-arduino-serial = "0.1.1"
serial = "0.4.0"
